force-app/main/default/objects/BMCServiceDesk__QueueStaffAssignment__c/BMCServiceDesk__QueueStaffAssignment__c.object-meta.xml
<CustomObject>
    <label>Queue Staff Assignment</label>
    <nameField>
        <displayFormat>AutoAssign-{0}</displayFormat>
        <label>Queue Staff Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Staff Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>