force-app/main/default/objects/BMCServiceDesk__QueueStaffAssignment__c/fields/BMCServiceDesk__Last_Incident_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Last_Incident_Assigned_Time__c</fullName>
    <label>Last Incident Assigned Time</label>
    <type>DateTime</type>
</CustomField>