force-app/main/default/objects/BMCServiceDesk__QueueStaffAssignment__c/fields/BMCServiceDesk__QueueId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QueueId__c</fullName>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>