force-app/main/default/objects/BMCServiceDesk__QueueStaffAssignment__c/fields/BMCServiceDesk__StaffId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StaffId__c</fullName>
    <label>Staff Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>